Allow adding shape and color to plot. Fix stdout redirect error.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,7 +19,7 @@ wildcard_constraints:
     sm="|".join(SAMPLES.keys()),
     ref="|".join(REFERENCES.keys()),
     rgn="|".join(rgn for ref, rgns in REFERENCE_REGIONS.items() for rgn in rgns),
-    window="[^\/]*",
+    window=r"[^\/]*",
 
 
 include: "rules/align.smk"
