Add bed window splitting. Change aggregate to not use cat since can reach max arg limit. Add option to override div time by contig. Small fixes to prevent crashes if no alignable region.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ mem: 100GB
 threads: 8
 output_dir: "results"
 log_dir: "logs"
-benchmarks: "benchmarks"
+benchmark_dir: "benchmarks"
 reference:
   - name: CHM13
     path: /project/logsdon_shared/projects/HGSVC3/Snakemake-MutationRate/data/T2T-CHM13v2.fasta
