--- a/workflow/envs/tools.yaml
+++ b/workflow/envs/tools.yaml
@@ -6,12 +6,14 @@ dependencies:
   - pip
   - samtools
   - seqtk
+  - seqkit
   - mafft
   - gcc
   - pip:
-    - biopython
+    - pyfaidx
     - polars
     - Cython
     - matplotlib
     - numpy
     - intervaltree
+    - cenplot
