--- a/paper/config/config_template.yaml
+++ b/paper/config/config_template.yaml
@@ -12,6 +12,7 @@ regex_sm_hap: "'(mat|pat|haplotype1|haplotype2|hap1|hap2|h1|h2)'"
 regex_sm_chrom: "'_(hsa(.*?)|chr(.*?)|cen(.*?))[:_]'"
 regex_ref_chrom: "(?:chr|hsa|cen)([0-9XY]{1,2})"
 length_range: [8000, 12000]
+display_order: [SAS, AFR, AMR, EAS, EUR]
 # https://www.nature.com/articles/s41586-025-08816-3
 samples:
   - name: ""
