--- a/workflow/envs/tools.yaml
+++ b/workflow/envs/tools.yaml
@@ -3,17 +3,15 @@ channels:
   - bioconda
 dependencies:
   - python==3.12
-  - pip
   - samtools
+  - bedtools
   - seqtk
   - seqkit
   - mafft
   - gcc
-  - pip:
-    - pyfaidx
-    - polars
-    - Cython
-    - matplotlib
-    - numpy
-    - intervaltree
-    - cenplot
+  - pyfaidx
+  - polars
+  - Cython
+  - matplotlib
+  - numpy
+  - cenplot
